centos-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos
spec:
  containers:
  - image: centos
    name: centos
    stdin: true
    tty: true
    volumeMounts:
    - mountPath: "/data"
      name: "data"
  volumes:
  - name: "data"
    hostPath:
      path: "/etc"
