kuard-pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata: 
  labels:
    app: kuard-config
  name: kuard-config
spec:
  containers:
  - name: test-container
    image:  gcr.io/kuar-demo/kuard-amd64:1
    volumeMounts:
    - name: config-volume
      mountPath: /my.conof
  volumes:
    - name: config-volume
      configMap:
        name: my-config
