nginx-app-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nginx-app
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx-app
    image: nginx
    ports:
      - containerPort: 80
    volumeMounts:
    - mountPath: "/usr/share/nginx/html"
      name: nginx-app
  volumes:
  - name: nginx-app
    persistentVolumeClaim:
      claimName: app-data-claim
